# python-project-boilerplate

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __main__.py
