[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.8"]

[tool.poetry]
authors = []
description = ""
name = "{{cookiecutter.package_name}}"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/"]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[tool.ruff]
line-length = 88
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"

[tool.ruff.format]
quote-style = "preserve"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "G", "N", "PL", "UP", "T10", "T20", "RUF", "FIX003"]
ignore = ["E203", "E266", "E501", "PLR0913"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-line-length = 88
