[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.8"]

[tool.poetry]
authors = []
description = ""
name = "{{cookiecutter.package_name}}"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
asyncio_mode = "auto"
testpaths = ["tests/"]

[tool.ruff]
line-length = 88
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"

[tool.ruff.format]
preview = true
quote-style = "preserve"

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "PLR0913"]
select = ["B", "C90", "E", "F", "FIX003", "G", "I", "N", "PL", "RUF", "T10", "T20", "UP"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-line-length = 88
